--- a/style.css
+++ b/style.css
@@ -69,3 +69,46 @@ body{
   tr:hover {
     background-color: #ddd;
   }
+
+  #login-form {
+    background-color: white;
+    border: 1px solid #e5e5e5;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
+    max-width: 350px;
+    margin: 100px auto;
+    padding: 20px;
+    text-align: center;
+}
+
+#login-form h1 {
+    margin: 0 0 20px 0;
+    padding: 0;
+    font-size: 24px;
+    color: #333;
+}
+
+#login-form input[type="text"],
+#login-form input[type="password"] {
+    border: 1px solid #ddd;
+    padding: 8px;
+    font-size: 16px;
+    color: #333;
+    width: 100%;
+    margin: 10px 0;
+    box-sizing: border-box;
+}
+
+#login-form input[type="submit"] {
+    background-color: #4caf50;
+    border: 0;
+    color: white;
+    padding: 8px;
+    font-size: 16px;
+    cursor: pointer;
+    width: 100%;
+    margin: 10px 0;
+}
+
+#login-form input[type="submit"]:hover {
+    opacity: 0.8;
+}
